--- a/grid.css
+++ b/grid.css
@@ -13,6 +13,11 @@ body {
 
 p, h2, h3{
     margin: 10px 25px 10px 10px;
+    text-align: right;
+}
+
+footer h2, .info h3 {
+    text-align: left;
 }
 
 .content, aside {
